feat(): clean locales, leave only esp eng and ja as lang, on errorCode display dummy and on submit another go welcome VIR-398

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -1,14 +1,8 @@
 {
     "main": {
       "title": "COVID-19 Cough Detection",
-      "logoIntro": "একটি স্বাধীন অলাভজনক গবেষণা সংস্থা",
       "note": "<strong> দয়া করে মনে রাখবেন: </strong> এই ফর্মটি শুধুমাত্র ডেটা সংগ্রহের জন্য। এটি আপনার কোভিড -১৯ status অবস্থা সম্পর্কে ভবিষ্যদ্বাণী করবে না বা কোনো রোগ, ব্যাধি বা অন্যান্য স্বাস্থ্যগত অবস্থা নির্ণয় করবে না। Virufy গবেষণা পরিচালনা করছে এবং আপনার দেওয়া তথ্য শুধুমাত্র সেই গবেষণার জন্য ব্যবহার করবে। Virufy একজন ডাক্তারের স্থান নেবে না এবং আপনাকে মনে করিয়ে দিতে চাই আপনার ডাক্তারের কাছ থেকে চিকিৎসা পরামর্শ নেওয়া আপনার দায়িত্ব।",
-      "paragraph1": "স্বাগত! এই কাজটি সম্পূর্ণ হতে মাত্র ৫ মিনিট সময় লাগবে।",
       "selectYourLanguage": "ভাষা",
-      "selectLocation": "অবস্থান",
-      "paragraph2": "কোভিড -১৯ কাশির ডেটা সংগ্রহ স্টাডি",
-      "selectCountry": "দেশ নির্বাচন করুন",
-      "selectRegion": "অঞ্চল নির্বাচন করুন",
       "nextButton": "পরবর্তী",
       "createdBy": "তৈরি করেছেন",
       "provideAccessCode": "প্রবেশাধিকার কোড",
@@ -17,12 +11,7 @@
       "privacyPolicy": "এগিয়ে যাওয়ার মাধ্যমে আপনি আমাদের গোপনীয়তা নীতির শর্তাবলী স্বীকার করেন"
     },
     "helpVirufy": {
-      "ourSupporters": "আমাদের সমর্থকরা",
-      "introParagraph": "<strong>অনুগ্রহ করে মনে রাখবেন:</strong> <i>এই ফর্মটি শুধুমাত্র ডেটা সংগ্রহের জন্য। এটি আপনার COVID-19 স্থিতির পূর্বাভাস দেবে না বা কোনও রোগ, ব্যাধি বা অন্যান্য স্বাস্থ্যের অবস্থা নির্ণয় করবে না। Virufy গবেষণা পরিচালনা করছে এবং শুধুমাত্র সেই গবেষণার জন্য আপনার দেওয়া তথ্য ব্যবহার করবে। Virufy একজন ডাক্তারের জায়গা নেবে না এবং আপনাকে মনে করিয়ে দিতে চাই যে আপনার ডাক্তারের কাছ থেকে চিকিৎসার পরামর্শ নেওয়া আপনার দায়িত্ব৷</i>",
-    "aboutParagraph": "<0><strong>Virufy</strong> হল একটি শক্তিশালী <strong>501(c)(3) অলাভজনক</strong> কোম্পানি যার সাথে <strong>250 স্বেচ্ছাসেবক/স্টাফ</strong> এবং <strong>50টি অংশীদার সংস্থা< </strong> অ্যামাজন ওয়েব সার্ভিস, স্ট্যানফোর্ড কোভিড-১৯ রেসপন্স ইনোভেশন ল্যাব এবং ওয়ান ইয়াং ওয়ার্ল্ড সহ। আমরা একটি স্মার্টফোন অ্যাপ তৈরি করেছি যা <strong>কোভিড পজিটিভ কাশি ডেটার সাথে তাদের মিল নির্ণয় করতে</strong> রেকর্ড করা কাশির স্বাক্ষর বিশ্লেষণ করতে AI ব্যবহার করে। Virufy UW, Stanford, UC Berkeley, MIT, Harvard, এবং CMU-এর ফ্যাকাল্টি এবং প্রাক্তন ছাত্রদের দ্বারা সমর্থিত৷</0> <1>বিশ্বব্যাপী মানুষের কাছ থেকে <strong>কাশি রেকর্ডিং</strong> সংগ্রহ করে, Virufy উন্নতি করছে COVID-এর অনন্য সাউন্ড প্যাটার্ন শনাক্ত করার ক্ষেত্রে এর AI অ্যালগরিদমের দৃঢ়তা৷ আমাদের গবেষণায়।</2>",
-      "bulletsIntro": "<strong> ভূমিকা: </strong> আমাদের সম্পর্কে এবং নিরাপত্তা অনুস্মারক",
-      "bulletCough": "<strong> দয়া করে ফোনে কাশি দিন </strong>",
-      "bulletQuestions": "<strong> দ্রুত স্বাস্থ্য প্রশ্ন </strong>",
+      "aboutParagraph": "<0><strong>Virufy</strong> হল একটি শক্তিশালী <strong>501(c)(3) অলাভজনক</strong> কোম্পানি যার সাথে <strong>250 স্বেচ্ছাসেবক/স্টাফ</strong> এবং <strong>50টি অংশীদার সংস্থা< </strong> অ্যামাজন ওয়েব সার্ভিস, স্ট্যানফোর্ড কোভিড-১৯ রেসপন্স ইনোভেশন ল্যাব এবং ওয়ান ইয়াং ওয়ার্ল্ড সহ। আমরা একটি স্মার্টফোন অ্যাপ তৈরি করেছি যা <strong>কোভিড পজিটিভ কাশি ডেটার সাথে তাদের মিল নির্ণয় করতে</strong> রেকর্ড করা কাশির স্বাক্ষর বিশ্লেষণ করতে AI ব্যবহার করে। Virufy UW, Stanford, UC Berkeley, MIT, Harvard, এবং CMU-এর ফ্যাকাল্টি এবং প্রাক্তন ছাত্রদের দ্বারা সমর্থিত৷</0> <1>বিশ্বব্যাপী মানুষের কাছ থেকে <strong>কাশি রেকর্ডিং</strong> সংগ্রহ করে, Virufy উন্নতি করছে COVID-এর অনন্য সাউন্ড প্যাটার্ন শনাক্ত করার ক্ষেত্রে এর AI অ্যালগরিদমের দৃঢ়তা৷ আমাদের গবেষণায়।</2>",
       "nextButton": "সম্মতি",
       "installApp": "অ্যাপ হিসেবে ইনস্টল করুন"
     },
@@ -99,13 +88,9 @@
       "resultDetectedText": "আপনার ভয়েস সম্ভাব্য COVID-19 এর সূচক আছে। <strong>আপনার স্বাস্থ্যসেবা পেশাদারের সাথে যোগাযোগ করুন</strong> এবং অতিরিক্ত সতর্কতা অবলম্বন করুন।",
       "testForCovid": "Test for COVID-19",
       "resultDetected": "COVID এর: শনাক্ত করা হয়েছে",
-      "likelihoodPrefix": "COVID এর ফলাফল:",
       "nextButton": "আরেকটা কাশি রেকর্ড করুন",
       "submitError": "একটি ত্রুটি ঘটেছে ।  অনুগ্রহপূর্বক আবার চেষ্টা করুন । ",
-      "result_positive": "পজিটিভ",
-      "result_negative": "নেগেটিভ",
-      "nextSteps": "পরবর্তী পদক্ষেপ",
-      "noteStatement": "<i>এই পণ্য সম্পর্কিত বিবৃতিগুলি মার্কিন খাদ্য ও ওষুধ প্রশাসন দ্বারা মূল্যায়ন করা হয়নি। এই পণ্যগুলির কার্যকারিতা এফডিএ-অনুমোদিত গবেষণা দ্বারা নিশ্চিত করা হয়নি। এই পণ্যগুলি কোন রোগ নির্ণয়, চিকিত্সা, নিরাময় বা প্রতিরোধ করার উদ্দেশ্যে নয়।</i>"  
+      "nextSteps": "পরবর্তী পদক্ষেপ"
     },
     "footerReportProblems": {
       "message": "কোন সমস্যা হলে এখানে রিপোর্ট করুন"
