--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -1,14 +1,8 @@
 {
   "main": {
     "title": "कोविद-19 खांसी का पता लगाना",
-    "logoIntro": "एक स्वतंत्र गैर-लाभकारी \nअनुसंधान संगठन",
     "note": "कृपया ध्यान दीजिये : यह प्रपत्र केवल आंकड़े संग्रह के लिए है। यह आपकी कोविड-19 स्थिति की भविष्यवाणी नहीं करेगा या किसी बीमारी, विकार या अन्य स्वास्थ्य स्थिति का निदान नहीं करेगा। विरुफाई अनुसंधान कर रहा है और आपके द्वारा प्रदान की गई जानकारी का उपयोग केवल उस अनुसंधान के लिए करेगा। \nविरुफाई एक डॉक्टर की जगह नहीं लेगा और आपको याद दिलाना चाहेंगे कि यह आपकी जिम्मेदारी है कि आप अपने डॉक्टर से चिकित्सा परामर्श लें।",
-    "paragraph1": "स्वागत! इस अध्ययन को पूरा \nहोने में केवल 5 मिनट का \nसमय लगना चाहिए।",
     "selectYourLanguage": "भाषा",
-    "selectLocation": "स्थान",
-    "paragraph2": "कोविद -19 खांसी डेटा संग्रह अध्ययन",
-    "selectCountry": "देश चुनें",
-    "regionRequired": "कृपया क्षेत्र चुनें",
     "selectRegion": "क्षेत्र का चयन करें",
     "nextButton": "अगला",
     "createdBy": "के द्वारा बनाई गई",
@@ -18,12 +12,7 @@
     "privacyPolicy": "आगे बढ़कर आप हमारी गोपनीयता नीति की शर्तों को स्वीकार करते हैं"
   },
   "helpVirufy": {
-    "ourSupporters": "हमारे समर्थक",
-    "introParagraph": "<strong>कृपया ध्यान दें:</strong> <i>यह फ़ॉर्म केवल डेटा संग्रहण के लिए है। यह आपकी COVID-19 स्थिति की भविष्यवाणी नहीं करेगा या किसी बीमारी, विकार या अन्य स्वास्थ्य स्थिति का निदान नहीं करेगा। विरुफी अनुसंधान कर रहा है और आपके द्वारा प्रदान की गई जानकारी का उपयोग केवल उस शोध के लिए करेगा। विरूफी डॉक्टर की जगह नहीं लेगा और आपको याद दिलाना चाहता है कि डॉक्टर से चिकित्सकीय सलाह लेना आपकी जिम्मेदारी है।</i>",
     "aboutParagraph": "<0><strong>विरूफी</strong> एक मजबूत <strong>501(c)(3) गैर-लाभकारी</strong> कंपनी है, जिसमें <strong>250 स्वयंसेवक/कर्मचारी</strong> और <strong>50 सहयोगी संगठन< हैं। /मजबूत> Amazon वेब सर्विसेज, स्टैनफोर्ड COVID-19 रिस्पांस इनोवेशन लैब और वन यंग वर्ल्ड सहित। हमने एक स्मार्टफोन ऐप विकसित किया है जो <strong>COVID पॉजिटिव खांसी डेटा के साथ उनकी समानता निर्धारित करने के लिए</strong> रिकॉर्ड की गई खांसी के हस्ताक्षर का विश्लेषण करने के लिए AI का लाभ उठाता है। विरुफी को यूडब्ल्यू, स्टैनफोर्ड, यूसी बर्कले, एमआईटी, हार्वर्ड और सीएमयू के फैकल्टी और पूर्व छात्रों का समर्थन प्राप्त है।</0> <1>दुनिया भर के लोगों से <strong>खांसी की रिकॉर्डिंग</strong> एकत्र करके, विरूफी सुधार कर रहा है COVID के अद्वितीय ध्वनि पैटर्न को पहचानने में इसके AI एल्गोरिदम की मजबूती।</strong>अपनी खांसी में योगदान देकर</strong> दुनिया भर में लाखों लोगों को लाभान्वित करने में मदद करने के लिए आपके पास</strong> शक्ति है</strong> हमारे अध्ययन में।</2>",
-    "bulletsIntro": "प्रस्तावना: , हमारे बारे में और सुरक्षा अनुस्मारक",
-    "bulletCough": "फोन में खांसी",
-    "bulletQuestions": "स्वास्थ्य प्रश्न",
     "nextButton": "अनुमति",
     "installApp": "एक ऐप के रूप में स्थापित करें"
   },
@@ -100,13 +89,9 @@
     "resultDetectedText": "आपकी आवाज़ में संभावित COVID-19 के संकेत हैं। <strong>कृपया अपने स्वास्थ्य देखभाल पेशेवर से संपर्क करें</strong> और अतिरिक्त सावधानी बरतें।",
     "testForCovid": "COVID-19 के लिए टेस्ट",
     "resultDetected": "कोविड -19: पता चला",
-    "likelihoodPrefix": "कोविड -19 परिणाम:",
     "nextButton": "एक और खांसी जमा करें",
     "submitError": "एक त्रुटि पाई गई। कृपया पुन: प्रयास करें।",
-    "result_positive": "सकारात्मक",
-    "result_negative": "नकारात्मक",
-    "nextSteps": "अगले कदम",
-    "noteStatement": "<i>इन उत्पादों के संबंध में दिए गए बयानों का मूल्यांकन अमेरिकी खाद्य एवं औषधि प्रशासन द्वारा नहीं किया गया है। एफडीए द्वारा अनुमोदित अनुसंधान द्वारा इन उत्पादों की प्रभावकारिता की पुष्टि नहीं की गई है। इन उत्पादों का उद्देश्य किसी भी बीमारी का निदान, उपचार, इलाज या रोकथाम नहीं है।</i>"
+    "nextSteps": "अगले कदम"
   },
   "footerReportProblems": {
     "message": "कुछ गलत? त्रुटि की रिपोर्ट करें"
