--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -1,14 +1,8 @@
 {
     "main": {
       "title": "COVID-19 ханиалгыг илрүүлэх",
-      "logoIntro": "Бие даасан ашгийн бус судалгааны байгууллага",
       "note": "<strong> Анхаарна уу: </strong> Энэ маягт нь зөвхөн мэдээлэл цуглуулах зорилготой. Энэ нь таны COVID-19 статусыг урьдчилан таамаглахгүй, аливаа өвчин, эмгэг, эрүүл мэндийн бусад нөхцөл байдлыг оношлохгүй. Вируфай нь судалгаа хийж байгаа бөгөөд таны өгсөн мэдээллийг зөвхөн энэхүү судалгаанд ашиглах болно. Вируфай нь эмчийг оронд ажиллахгүй бөгөөд эмчээсээ зөвлөгөө авах нь таны үүрэг гэдгийг сануулахыг хүсч байна.",
-      "paragraph1": "Тавтай морилно уу! Энэхүү судалгааг бөглөж дуусгахад ердөө 5 минут л хангалттай.",
       "selectYourLanguage": "Хэл",
-      "selectLocation": "Байршил",
-      "paragraph2": "Ковид-19 Ханиалгах чимээ аудио өгөгдөл цуглуулах судалгаа",
-      "selectCountry": "Улсаа сонгоно уу",
-      "selectRegion": "Бүс нутгийг сонгоно уу",
       "nextButton": "Дараачийн",
       "createdBy": "Бүтээсэн",
       "provideAccessCode": "Нэвтрэх код",
@@ -17,12 +11,7 @@
       "privacyPolicy": "Продолжая, вы принимаете условия нашей Политики конфиденциальности"
     },
     "helpVirufy": {
-      "ourSupporters": "Манай дэмжигчид",
-      "introParagraph": "<strong>Обратите внимание:</strong> <i>Эта форма предназначена только для сбора данных. Она не позволяет предсказать ваш статус COVID-19 или диагностировать какое-либо заболевание, расстройство или другое состояние здоровья. Virufy проводит исследования и будет использовать предоставленную вами информацию только для этих исследований. Virufy не заменяет врача и напоминает вам, что вы обязаны обращаться за советом к своему врачу.</i>",
-    "aboutParagraph": "<0><strong>Virufy</strong> – это надежная некоммерческая организация <strong>501(c)(3)</strong>, в которой работает <strong>250 добровольцев/сотрудников</strong> и <strong>50 партнерских организаций< /strong> включая Amazon Web Services, Стэнфордскую лабораторию инноваций по реагированию на COVID-19 и One Young World. Мы разработали приложение для смартфонов, которое использует искусственный интеллект для анализа признаков зарегистрированного кашля, чтобы <strong>определить их сходство с данными о положительном кашле на COVID</strong>. Virufy поддерживают преподаватели и выпускники Университета Вашингтона, Стэнфорда, Калифорнийского университета в Беркли, Массачусетского технологического института, Гарварда и CMU.</0> <1>Собирая <strong>записи кашля</strong> от людей со всего мира, Virufy улучшает надежность алгоритма искусственного интеллекта в распознавании уникального звукового паттерна COVID.</1><2><strong>У вас есть возможность</strong> помочь миллионам людей во всем мире, <strong>внося свой кашель</strong> в нашем исследовании.</2>",
-      "bulletsIntro": "<strong> Танилцуулга: </strong> Бидний тухай болон Аюулгүй байдлын талаар",
-      "bulletCough": "<strong> Утас руу ханиалгах </strong>",
-      "bulletQuestions": "<strong> Эрүүл мэндийн талаархи хурдан асуултууд </strong>",
+      "aboutParagraph": "<0><strong>Virufy</strong> – это надежная некоммерческая организация <strong>501(c)(3)</strong>, в которой работает <strong>250 добровольцев/сотрудников</strong> и <strong>50 партнерских организаций< /strong> включая Amazon Web Services, Стэнфордскую лабораторию инноваций по реагированию на COVID-19 и One Young World. Мы разработали приложение для смартфонов, которое использует искусственный интеллект для анализа признаков зарегистрированного кашля, чтобы <strong>определить их сходство с данными о положительном кашле на COVID</strong>. Virufy поддерживают преподаватели и выпускники Университета Вашингтона, Стэнфорда, Калифорнийского университета в Беркли, Массачусетского технологического института, Гарварда и CMU.</0> <1>Собирая <strong>записи кашля</strong> от людей со всего мира, Virufy улучшает надежность алгоритма искусственного интеллекта в распознавании уникального звукового паттерна COVID.</1><2><strong>У вас есть возможность</strong> помочь миллионам людей во всем мире, <strong>внося свой кашель</strong> в нашем исследовании.</2>",
       "nextButton": "Согласие",
       "installApp": "Апп хэлбэрээр суулгана уу"
     },
@@ -99,13 +88,9 @@
       "resultDetectedText": "В вашем голосе есть признаки возможного COVID-19. <strong>Обратитесь к своему лечащему врачу</strong> и примите дополнительные меры предосторожности.",
       "testForCovid": "Тест на COVID-19",
       "resultDetected": "COVID-19: ИЛРҮҮЛСЭН",
-      "likelihoodPrefix": "COVID-19-ын үр дүн:",
       "nextButton": "Өөр ханиалгаж буй бичлэг илгээх",
       "submitError": "Алдаа гарлаа. Дахин оролдоно уу.",
-      "result_positive": "Эерэг",
-      "result_negative": "Сөрөг",
-      "nextSteps": "Дараагийн алхмууд",
-      "noteStatement": "<i>Эдгээр бүтээгдэхүүний талаар хийсэн мэдэгдлийг АНУ-ын Хүнс, эмийн хяналтын газраас үнэлээгүй байна. Эдгээр бүтээгдэхүүний үр нөлөө нь FDA-аас батлагдсан судалгаагаар батлагдаагүй байна. Эдгээр бүтээгдэхүүн нь аливаа өвчнийг оношлох, эмчлэх, эмчлэх, урьдчилан сэргийлэх зорилготой биш юм.</i>"  
+      "nextSteps": "Дараагийн алхмууд"
     },
     "footerReportProblems": {
       "message": "Ямар нэг зүйл буруу байна уу? Алдаа мэдээлэх"
