--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -1,14 +1,8 @@
 {
     "main": {
       "title": "COVID-19 Ανίχνευση βήχα",
-      "logoIntro": "Ένας ανεξάρτητος μη κερδοσκοπικός ερευνητικός οργανισμός",
       "note": "<strong>Παρακαλώ σημειώστε:</strong> Αυτό το έντυπο προορίζεται μόνο για τη συλλογή δεδομένων. Δεν θα προβλέψει την κατάσταση του COVID-19 ή θα διαγνώσει οποιαδήποτε ασθένεια, διαταραχή ή άλλη κατάσταση υγείας. Η Virufy διεξάγει έρευνα και θα χρησιμοποιήσει τις πληροφορίες που παρέχετε αποκλειστικά για ερευνητικούς σκοπούς. Το Virufy δεν θα αντικαταστήσει τον γιατρό και θα ήθελε να σας υπενθυμίσει ότι είναι δική σας ευθύνη να ζητάτε ιατρική συμβουλή από τον γιατρό σας.",
-      "paragraph1": "Καλώς ήρθατε! Η συμπλήρωση αυτής της μελέτης θα διαρκέσει περίπου 5 λεπτά.",
       "selectYourLanguage": "Γλώσσα",
-      "selectLocation": "Τοποθεσία",
-      "paragraph2": "Μελέτη συλλογής δεδομένων για τον βήχα Covid-19",
-      "selectCountry": "Επιλέξτε χώρα",
-      "selectRegion": "Επιλέξτε περιοχή",
       "nextButton": "Επόμενο",
       "createdBy": "Δημιουργήθηκε από",
       "provideAccessCode": "Κωδικός πρόσβασης",
@@ -17,12 +11,7 @@
       "privacyPolicy": "Προχωρώντας αποδέχεστε τους όρους της Πολιτικής Απορρήτου μας"
     },
     "helpVirufy": {
-      "ourSupporters": "Οι υποστηρικτές μας",
-      "introParagraph": "<strong>Παρακαλώ σημειώστε</strong> <i>Το παρόν έντυπο προορίζεται μόνο για τη συλλογή δεδομένων. Δεν θα προβλέψει την κατάσταση COVID-19 ή θα διαγνώσει οποιαδήποτε ασθένεια, διαταραχή ή άλλη κατάσταση υγείας. Η Virufy διεξάγει έρευνα και θα χρησιμοποιήσει τις πληροφορίες που παρέχετε μόνο για την έρευνα αυτή. Το Virufy δεν θα αντικαταστήσει τον γιατρό και θα ήθελε να σας υπενθυμίσει ότι είναι δική σας ευθύνη να ζητάτε ιατρική συμβουλή από τον γιατρό σας.</i>",
       "aboutParagraph": "<0><strong>Virufy</strong> είναι μια ισχυρή <strong>501(c)(3) μη κερδοσκοπική</strong> εταιρεία με <strong>250 εθελοντές/προσωπικό</strong> και <strong>50 συνεργαζόμενους οργανισμούς< /strong> συμπεριλαμβανομένων των υπηρεσιών Web της Amazon, του Stanford COVID-19 Response Innovation Lab και του One Young World. Αναπτύξαμε μια εφαρμογή για smartphone που αξιοποιεί την τεχνητή νοημοσύνη για να αναλύσει την υπογραφή των καταγεγραμμένων βήχα για να <strong>προσδιορίσει την ομοιότητά τους με τα δεδομένα βήχα θετικού COVID</strong>. Το Virufy υποστηρίζεται από καθηγητές και αποφοίτους από το UW, το Stanford, το UC Berkeley, το MIT, το Harvard και το CMU.</0> <1>Συλλέγοντας <strong>ηχογραφήσεις βήχα</strong> από ανθρώπους σε όλο τον κόσμο, το Virufy βελτιώνει την την ευρωστία του αλγορίθμου τεχνητής νοημοσύνης στην αναγνώριση του μοναδικού ηχητικού μοτίβου του COVID. </1><2><strong>Έχετε τη δύναμη</strong> να βοηθήσετε εκατομμύρια ανθρώπους σε όλο τον κόσμο <strong>συμβάλλοντας στον βήχα σας</strong> στη μελέτη μας.</2>",
-      "bulletsIntro": "<strong>Εισαγωγή: </strong>Σχετικά με εμάς και υπενθυμίσεις ασφαλείας",
-      "bulletCough": "<strong>Βήχας στο τηλέφωνο</strong>",
-      "bulletQuestions": "<strong>Γρήγορες ερωτήσεις για την υγεία</strong>",
       "nextButton": "Συναίνεση",
       "installApp": "Εγκατάσταση ως εφαρμογή"
     },
@@ -99,13 +88,9 @@
       "resultDetectedText": "Η φωνή σας έχει ενδείξεις πιθανού COVID-19.  <strong>Επικοινωνήστε με τον επαγγελματία υγείας σας</strong> και λάβετε πρόσθετες προφυλάξεις.",
       "testForCovid": "Δοκιμή για COVID-19",
       "resultDetected": "COVID-19: ανιχνεύεται",
-      "likelihoodPrefix": "Αποτέλεσμα COVID-19:",
       "nextButton": "Υποβάλετε άλλο δέιγμα βήχα",
       "submitError": "Εμφανίστηκε σφάλμα. Προσπαθήστε ξανά.",
-      "result_positive": "Θετικό",
-      "result_negative": "Αρνητικό",
-      "nextSteps": "Επόμενα βήματα",
-      "noteStatement": "<i>Οι δηλώσεις που γίνονται σχετικά με αυτά τα προϊόντα δεν έχουν αξιολογηθεί από τον Οργανισμό Τροφίμων και Φαρμάκων των ΗΠΑ. Η αποτελεσματικότητα αυτών των προϊόντων δεν έχει επιβεβαιωθεί από έρευνα εγκεκριμένη από τον FDA. Τα προϊόντα αυτά δεν προορίζονται για τη διάγνωση, τη θεραπεία, τη θεραπεία ή την πρόληψη οποιασδήποτε ασθένειας.</i>"  
+      "nextSteps": "Επόμενα βήματα"
     },
     "footerReportProblems": {
       "message": "Συμβαίνει κάτι λάθος; Αναφέρετε ένα σφάλμα"
