--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,14 +1,9 @@
 {
   "main": {
     "title": "Formulario de Recolección de datos de COVID-19",
-    "logoIntro": "Una organización independiente de investigación sin ánimo de lucro",
     "note": "<strong>Por favor, tenga en cuenta:</strong> Este formulario es sólo para recopilar datos. No predice su estado de COVID-19 ni diagnostica ninguna enfermedad, trastorno u otra condición de salud. Virufy está llevando a cabo una investigación y utilizará la información que usted proporcione sólo para esa investigación. Virufy no sustituirá a un médico y le recuerda que es su responsabilidad buscar el consejo de su médico.",
-    "paragraph1": "Bienvenido. Este estudio sólo debería tomarle unos 5 minutos en completarse.",
     "selectYourLanguage": "Idioma",
     "paragraph2": "Estudio de recopilación de datos de tos Covid-19",
-    "selectLocation": "Ubicación",
-    "selectCountry": "Seleccione país",
-    "selectRegion": "Seleccione region",
     "nextButton": "Siguiente",
     "createdBy": "Creado por",
     "provideAccessCode": "Código de acceso",
@@ -17,12 +12,7 @@
     "privacyPolicy": "Al continuar, acepta los términos de nuestra Política de privacidad."
   },
   "helpVirufy": {
-    "ourSupporters": "Nuestros colaboradores",
-    "introParagraph": "<strong>Atención:</strong> <i>Este formulario sólo sirve para recopilar datos. No predecirá su estado COVID-19 ni diagnosticará ninguna enfermedad, trastorno u otra condición de salud. Virufy está llevando a cabo una investigación y utilizará la información que usted proporcione únicamente para dicha investigación. Virufy no sustituirá a un médico y le recuerda que es su responsabilidad consultar a su médico.</i>",
     "aboutParagraph": "<0><strong>Virufy</strong> es una sólida empresa <strong>501(c)(3) sin fines de lucro</strong> con <strong>250 voluntarios/personal</strong> y <strong>50 organizaciones asociadas< /strong> incluidos Amazon Web Services, Stanford COVID-19 Response Innovation Lab y One Young World. Hemos desarrollado una aplicación para teléfonos inteligentes que aprovecha la IA para analizar la firma de toses registradas para <strong>determinar su similitud con los datos de tos positivos de COVID</strong>. Virufy cuenta con el apoyo de profesores y ex alumnos de UW, Stanford, UC Berkeley, MIT, Harvard y CMU.</0> <1>Al recopilar <strong>grabaciones de tos</strong> de personas de todo el mundo, Virufy está mejorando la robustez de su algoritmo de IA para reconocer el patrón de sonido único de COVID.</1><2><strong>Tienes el poder</strong> de ayudar a beneficiar a millones de personas en todo el mundo al <strong>contribuir con tu tos</strong> en nuestro estudio.</2>",
-    "bulletsIntro": "<strong> Intro: </strong> Sobre nosotros y seguridad",
-    "bulletCough": "<strong> Toser en el teléfono </strong>",
-    "bulletQuestions": "<strong> Preguntas breves sobre la salud </strong>",
     "installApp": "Instalar como aplicación",
     "nextButton": "Consentimiento"
   },
@@ -100,13 +90,9 @@
     "testForCovid": "Test for COVID-19",
     "resultDetected": "COVID-19: DETECTADO",
     "predictionResultTitle": "Resultado de la Predicción",
-    "likelihoodPrefix": "Resultado de COVID-19:",
     "nextButton": "Subir otra tos",
     "submitError": "Se produjo un error. Por favor, inténtelo de nuevo.",
-    "result_positive": "Positivo",
-    "result_negative": "Negativo",
-    "nextSteps": "Próximos pasos",
-    "noteStatement": "<i>Las afirmaciones realizadas en relación con estos productos no han sido evaluadas por la Administración de Alimentos y Medicamentos de los Estados Unidos. La eficacia de estos productos no ha sido confirmada por investigaciones aprobadas por la FDA. Estos productos no están destinados a diagnosticar, tratar, curar o prevenir ninguna enfermedad.</i>"
+    "nextSteps": "Próximos pasos"
   },
   "footerReportProblems": {
     "message": "¿Algo mal? Reportar un problema"
