--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -1,14 +1,8 @@
 {
     "main": {
       "title": "การตรวจหาเชื้อโควิด-19",
-      "logoIntro": "องค์กรอิสระที่ไม่แสวงหากำไร",
       "note": "<strong>โปรดทราบ:</strong> แบบฟอร์มนี้ใช้สำหรับการรวบรวมข้อมูลเท่านั้น ไม่สามารถประเมินอาการของโรค COVID-19 วินิจฉัยโรค ความผิดปกติ หรือภาวะสุขภาพอื่นๆของท่าน Virufy จะใช้ข้อมูลของท่านสำหรับการวิจัยนั้นเท่านั้น ทางVirufy หากท่านมีอาการผิดปกติใดๆ ขอให้ท่านรับคำแนะนำจากแพทย์",
-      "paragraph1": "ยินดีต้อนรับ ! การวิจัยนี้ใช้เวลาประมาณ 5 นาทีเท่านั้น",
       "selectYourLanguage": "ภาษา",
-      "selectLocation": "สถานที่",
-      "paragraph2": "การเก็บรวบรวมข้อมูลการไอจากโควิด-19",
-      "selectCountry": "เลือกประเทศ",
-      "selectRegion": "เลือกภูมิภาค",
       "nextButton": "ต่อไป",
       "createdBy": "สร้างโดย",
       "provideAccessCode": "รหัสการเข้าถึง",
@@ -17,12 +11,7 @@
       "privacyPolicy": "การดำเนินการต่อถือว่าคุณยอมรับเงื่อนไขของนโยบายความเป็นส่วนตัวของเรา"
     },
     "helpVirufy": {
-      "ourSupporters": "ผู้สนับสนุนของเรา",
-      "introParagraph": "<strong>โปรดทราบ:</strong> <i>แบบฟอร์มนี้มีไว้สำหรับการรวบรวมข้อมูลเท่านั้น จะไม่ทำนายสถานะ COVID-19 ของคุณหรือวินิจฉัยโรค ความผิดปกติ หรือภาวะสุขภาพอื่นๆ Virufy กำลังดำเนินการวิจัยและจะใช้ข้อมูลที่คุณให้ไว้สำหรับการวิจัยนั้นเท่านั้น Virufy จะไม่ใช้แทนแพทย์ และขอเตือนคุณว่าคุณต้องรับผิดชอบในการขอคำแนะนำทางการแพทย์จากแพทย์ของคุณ</i>",
-    "aboutParagraph": "<0><strong>Virufy</strong> เป็นบริษัท<strong>501(c)(3) ไม่แสวงหากำไร</strong>ที่แข็งแกร่ง โดยมี<strong>อาสาสมัคร/พนักงาน 250 คน</strong> และ <strong>องค์กรพันธมิตร 50 แห่ง< /strong> รวมถึง Amazon Web Services, Stanford COVID-19 Response Innovation Lab และ One Young World เราได้พัฒนาแอปบนสมาร์ทโฟนซึ่งใช้ประโยชน์จาก AI เพื่อวิเคราะห์ลายเซ็นของอาการไอที่บันทึกไว้เพื่อ<strong>ระบุความคล้ายคลึงกันกับข้อมูลการไอที่เป็นบวกของ COVID</strong> Virufy ได้รับการสนับสนุนจากคณาจารย์และศิษย์เก่าจาก UW, Stanford, UC Berkeley, MIT, Harvard และ CMU</0> <1>ด้วยการรวบรวม <strong>บันทึกการไอ</strong> จากผู้คนทั่วโลก Virufy กำลังปรับปรุง ความทนทานของอัลกอริทึม AI ในการจดจำรูปแบบเสียงที่เป็นเอกลักษณ์ของ COVID</1><2><strong>คุณมีอำนาจ</strong>ที่จะช่วยสร้างประโยชน์ให้กับผู้คนนับล้านทั่วโลกด้วยการ<strong>ช่วยไอของคุณ</strong> ในการศึกษาของเรา</2>",
-      "bulletsIntro": "<strong>บทนำ: </strong>เกี่ยวกับเราและการแจ้งเตือนความปลอดภัย",
-      "bulletCough": "<strong>ไอเข้าโทรศัพท์</strong>",
-      "bulletQuestions": "<strong>คำถามสุขภาพเบื้องต้น</strong>",
+      "aboutParagraph": "<0><strong>Virufy</strong> เป็นบริษัท<strong>501(c)(3) ไม่แสวงหากำไร</strong>ที่แข็งแกร่ง โดยมี<strong>อาสาสมัคร/พนักงาน 250 คน</strong> และ <strong>องค์กรพันธมิตร 50 แห่ง< /strong> รวมถึง Amazon Web Services, Stanford COVID-19 Response Innovation Lab และ One Young World เราได้พัฒนาแอปบนสมาร์ทโฟนซึ่งใช้ประโยชน์จาก AI เพื่อวิเคราะห์ลายเซ็นของอาการไอที่บันทึกไว้เพื่อ<strong>ระบุความคล้ายคลึงกันกับข้อมูลการไอที่เป็นบวกของ COVID</strong> Virufy ได้รับการสนับสนุนจากคณาจารย์และศิษย์เก่าจาก UW, Stanford, UC Berkeley, MIT, Harvard และ CMU</0> <1>ด้วยการรวบรวม <strong>บันทึกการไอ</strong> จากผู้คนทั่วโลก Virufy กำลังปรับปรุง ความทนทานของอัลกอริทึม AI ในการจดจำรูปแบบเสียงที่เป็นเอกลักษณ์ของ COVID</1><2><strong>คุณมีอำนาจ</strong>ที่จะช่วยสร้างประโยชน์ให้กับผู้คนนับล้านทั่วโลกด้วยการ<strong>ช่วยไอของคุณ</strong> ในการศึกษาของเรา</2>",
       "nextButton": "ยินยอม",
       "installApp": "ติดตั้งแอปพลิเคชั่น"
     },
@@ -99,13 +88,9 @@
       "resultDetectedText": "เสียงของคุณมีตัวบ่งชี้ของ COVID-19 ที่เป็นไปได้ <strong>โปรดติดต่อบุคลากรทางการแพทย์ของคุณ</strong> และใช้มาตรการป้องกันเพิ่มเติม",
       "testForCovid": "การทดสอบสำหรับ COVID-19",
       "resultDetected": "โควิด-19: ตรวจพบ",
-      "likelihoodPrefix": "ผลลัพธ์ของ COVID-19:",
       "nextButton": "บันทึกการไอเพิ่มอีก",
       "submitError": "เกิดข้อผิดพลาด กรุณาลองอีกครั้ง",
-      "result_positive": "ผลเป็นบวก",
-      "result_negative": "ผลเป็นลบ",
-      "nextSteps": "ขั้นตอนถัดไป",
-      "noteStatement": "<i>คำชี้แจงเกี่ยวกับผลิตภัณฑ์เหล่านี้ยังไม่ได้รับการประเมินโดยสำนักงานคณะกรรมการอาหารและยาประเทศสหรัฐอเมริกา ประสิทธิภาพของผลิตภัณฑ์เหล่านี้ยังไม่ได้รับการยืนยันโดยการวิจัยที่ได้รับการอนุมัติจาก FDA ผลิตภัณฑ์เหล่านี้ไม่ได้มีวัตถุประสงค์เพื่อวินิจฉัย บำบัด รักษา หรือป้องกันโรคใดๆ</i>"  
+      "nextSteps": "ขั้นตอนถัดไป"
     },
     "footerReportProblems": {
       "message": "บางสิ่งผิดปกติ? รายงานข้อผิดพลาด"
