updated select result and consent button for all lang

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -5,6 +5,10 @@
       "selectYourLanguage": "اللغة",
       "nextButton": "التالي",
       "createdBy": "تم الإنشاء بواسطة",
+      "selectResult": ":اختر النتيجة",
+      "consent": "موافقة",
+      "positive": "إيجابي",
+      "negative": "سلبي",
       "provideAccessCode": "رمز الوصول",
       "enterAccessCode": "أدخل رمز الوصول",
       "aboutUsTitle": "من نحن؟",
