--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -6,6 +6,10 @@
     "paragraph2": "Estudio de recopilación de datos de tos Covid-19",
     "nextButton": "Siguiente",
     "createdBy": "Creado por",
+    "selectResult": "Seleccionar Resultado :",
+    "consent": "Consentimiento",
+    "positive": "Positivo",
+    "negative": "Negativo",
     "provideAccessCode": "Código de acceso",
     "enterAccessCode": "Introduzca el código de acceso",
     "aboutUsTitle": "Sobre Nosotros",
