--- a/src/locales/ur.json
+++ b/src/locales/ur.json
@@ -4,6 +4,10 @@
     "note": "<strong>براہ کرم نوٹ کریں:</strong> یہ فارم صرف ڈیٹا جمع کرنے کے لئے ہے اور اس سے نہ تو کورونا وائرس  کی پیش گوئی کی جائے گی اور نہ ہی کسی بیماری یا صحت کی حالت کی تشخیص کی جائے گی۔ ویرُوفائی صرف تحقیق کے مقصد کے لیے آپ کی فراہم کردہ معلومات کا استعمال کرے گا۔ ویرُوفائی ڈاکٹر کا متبادل نہیں ہے اور یاد دلاتا ہے کہ طبی مشورہ لینا آپ کی ذمہ داری ہے۔",
     "selectYourLanguage": "زبان منتخب کریں",
     "nextButton": "اگلا",
+    "selectResult": ":نتیجہ منتخب کریں",
+    "positive": "مثبت",
+    "negative": "منفی",
+    "consent": "رضامندی",
     "createdBy": "تخلیق کردہ",
     "provideAccessCode": "رسائی کوڈ",
     "enterAccessCode": "رسائی کوڈ درج کریں",
