--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -2,6 +2,7 @@
     "main": {
       "title": "COVID-19 كشف السعال الناتج عن",
       "note": "<strong>يرجى الملاحظة:</strong> هذا النموذج مخصص لجمع البيانات فقط ولن يتنبَّأ بإصابتك بفيروس كوفيد أو يشخِّص أي مرض أو اضطراب أو حالة صحية أخرى. تقوم فيروفاي بإجراء بحث وستستخدم المعلومات التي تقدمها لهذا البحث فقط. فيروفاي لن تحل محل الطبيب وترغب في تذكيرك بأنه من مسؤوليتك استشارة الطبيب للحصول على النصيحة الطبية.",
+      "note":  "<strong>يرجى الملاحظة:</strong> هذا النموذج مخصص لجمع البيانات فقط ولن يتنبَّأ بإصابتك بفيروس كوفيد-19 أو يشخِّص أي مرض أو اضطراب أو حالة صحية أخرى. تقوم Virufy بإجراء بحث وستستخدم المعلومات التي تقدمها لهذا البحث فقط. Virufy لن تحل محل الطبيب وترغب في تذكيرك بأنه من مسؤوليتك استشارة الطبيب للحصول على النصيحة الطبية.",
       "selectYourLanguage": "اللغة",
       "nextButton": "التالي",
       "createdBy": "تم الإنشاء بواسطة",
@@ -12,6 +13,7 @@
     },
     "helpVirufy": {
       "aboutParagraph": "<0><strong>فيروفاي</strong> هي شركة غير ربحية قوية تضم <strong>250 متطوِّعاً/موظفاً</strong> وخمسين منظَّمة شريكة بما في ذلك <strong>خدمات أمازون الشبكية</strong>، مختبر الابتكار للاستجابة للكوفيد من <strong>جامعة ستانفورد</strong>، ومنظَّمة عالم فتيّ واحد. لقد طوَّرنا تطبيقاً للهواتف الذكية يعتمد على الذكاء الاصطناعي لتحليل بصمة السعال المسجَّلة وتحديد مدى <strong>تشابهها مع بيانات السعال المصاحب للكوفيد</strong>. تحظى فيروفاي بدعم من أعضاء في هيئة التدريس وخريجين من <strong>جامعة واشنطن، جامعة ستانفورد، جامعة كاليفورنيا/بيركلي، معهد ماساتشوستس للتكنولوجيا، جامعة هارفارد، وجامعة كارنيجي ميلون.</0> <1>من خلال جمع <strong>تسجيلات السعال</strong> من أشخاص حول العالم، تقوم فيروفاي بتحسين قدرة خوارزميتها الذكية على تعرُّف نمط الصوت الفريد للكوفيد.</1><2><strong>لديك القدرة</strong> على إفادة ملايين الأشخاص حول العالم من خلال <strong>مساهمتك في دراسة السعال</strong> الخاصة بنا.</2>",
+      "aboutParagraph": "<strong>Virufy</strong> شركة صاعدة غير ربحية، تعمل بموجب المادة 501(c)(3)، وتضم 250 متطوعًا/موظفًا، و50 منظمة شريكة، بما في ذلك خدمات أمازون ويب، ومختبر ستانفورد للابتكار في الاستجابة لكوفيد-19، ومنظمة عالم واحد للشباب . وقد طورنا تطبيقًا للهواتف الذكية يعتمد على الذكاء الاصطناعي لتحليل بصمات السعال المسجلة، وتحديد مدى تشابهها مع بيانات السعال الإيجابية لكوفيد-19. وتحظى Virufy بدعم من أعضاء في هيئة التدريس و خريجين من جامعات : جامعة واشنطن، وستانفورد، وجامعة كاليفورنيا، بيركلي، ومعهد ماساتشوستس للتكنولوجيا، وجامعة هارفارد، وجامعة كارنيجي ميلون.",
       "installApp": "حمِّل التطبيق",
       "nextButton": "الموافقة"
     },
@@ -32,6 +34,7 @@
         "title": "التعليمات",
         "intro1": "اجلس في <strong>مكان هادىء</strong> بعيداً عن الآخرين بمسافة لا تقلُّ عن <strong>عشرين قدماً (ستة أمتار)</strong> وارتدِ كمامة من القماش أو كمامة جراحية. وإذا كنت تشعر بالتعب فيرجى منك الجلوس.",
         "intro2": "أمسك جهازك على بعد <strong>1-2 ft (30-60 cm)</strong> من فمك و<strong>تجنَّب تغطيته</strong> بالبلاستك أو أي شيء آخر. تجنَّب السعال بقوَّة مفرطة.",
+        "intro2":"امسك جهازك على بعد<strong> 1-2  قدما (30-60 سم)</strong> من فمك، و تجنب تغطيه بالبلاستيك او اي شئ اخر، و تجنب السعال بقوّة مفرطة.",
         "text": "اضغط على زر التسجيل واسعل باتجاه الجزء السفلي من هاتفك. <strong>اسعل عمدًا</strong> <strong>ثلاث مرات</strong> مع <strong>أخذ نفس عميق</strong> بين كل سعال. عندما تنتهي، اضغط على زر الإيقاف.",
         "record": "تسجيل",
         "stop": "إيقاف"
@@ -49,6 +52,7 @@
       "next": "متابعة",
       "delete": "حذف",
       "textCount": "اضغط متابعة للمواصلة.",
+      "textCount": "للاستمرار انقر على <strong>متابعة</strong>",
       "upload": "ارفع الملفّ الخاصّ بك"
     },
     "recordingsRecordManual": {
@@ -79,14 +83,17 @@
       "note": "ملاحظة مهمة",
       "result": "النتائج",
       "resultModal": "<strong>ملاحظة مهمة:</strong> هذا التطبيق لا يشخِّص إصابتك بالكوفيد أو غيره من الأمراض. إنَّ فيروفاي تقوم بإجراء بحث وتستخدم المعلومات التي تقدّمها لها لهذا الغرض فقط. لن تحل فيروفاي محل الطبيب وترغب بتذكيرك بمسؤوليتك في استشارة الطبيب والحصول على النصيحة الطبية.",
+      "resultModal": "</strong>ملاحظة مهمة<strong>: هذا التطبيق لا يشخِّص إصابتك بالكوفيد-19 أو غيره من الأمراض. إنَّ Virufy تقوم بإجراء بحث وتستخدم المعلومات التي تقدّمها لها لهذا الغرض فقط. لن تحل Virufy محل الطبيب وترغب بتذكيرك بمسؤوليتك في استشارة الطبيب والحصول على النصيحة الطبية.",
       "resultNotDetected": "لم يتم الكشف عن وجود كوفيد.",
       "resultNotDetectedText": "لا تظهر في صوتك مؤشّرات على وجود الفيروس. يرجى الاستمرار في اتخاذ التدابير المناسبة <strong>بناءً على نصيحة مقدِّم الرعاية الصحية أو الهيأة التنظيمية المعنية، وإعادة التقويم في تطبيقنا يومياً.</strong>",
       "resultDetected": "تمَّ الكشف عن وجود كوفيد.",
       "resultNotAnalyze": "لا يمكن تحليل السعال.",
       "resultModalDummy": "<strong>ملاحظة مهمَّة:</strong> هذا التطبيق مخصَّص لأغراض العرض فقط ولا يقدِّم تنبؤاً حقيقياً. يرجى زيارة دراسة فيروفاي للمساهمة بسعالِك.",
+      "resultModalDummy": "<strong>ملاحظة مهمَّة:</strong> هذا التطبيق مخصَّص لأغراض العرض فقط ولا يقدِّم تنبؤاً حقيقياً. يرجى زيارة دراسة Virufy للمساهمة بسعالِك.",
       "resultNotAnalyzeText": "خوارزميتنا غير قادرة على تحديد حالتك من كوفيد. <strong>يرجى تسجيل سعالك مرَّة أخرى.</strong>",
       "resultDetectedDummy": "<strong>تم الكشف عن كوفيد</strong> <br/> (مثال تجريبي)",
       "resultDetectedText": "صوتك يحتوي على مؤشرات لوجود كوفيد. <strong>يرجى الاتصال بمقدِّم الرعاية الطبية الخاص بك</strong> واتخاذ احتياطات إضافية.",
+      "resultDetectedText": "صوتك يحتوي على مؤشرات لوجود كوفيد. <strong>يرجى الاتصال بمقدِّم الرعاية الصحية الخاص بك</strong> واتخاذ احتياطات إضافية.",
       "testForCovid": "اختبار كوفيد 19",
       "nextButton": "قدِّم نموذجاً آخر من السعال",
       "submitError": "حدث خطأ. يرجى إعادة المحاولة.",
