--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,7 +1,9 @@
 {
     "main": {
       "title": "COVID-19 كشف السعال الناتج عن",
-      "note": "<strong>يرجى الملاحظة:</strong> هذا النموذج مخصص لجمع البيانات فقط ولن يتنبَّأ بإصابتك بفيروس كوفيد أو يشخِّص أي مرض أو اضطراب أو حالة صحية أخرى. تقوم فيروفاي بإجراء بحث وستستخدم المعلومات التي تقدمها لهذا البحث فقط. فيروفاي لن تحل محل الطبيب وترغب في تذكيرك بأنه من مسؤوليتك استشارة الطبيب للحصول على النصيحة الطبية.",
+      "note": "<strong>يرجى الملاحظة:\u200F</strong> هذا النموذج مخصص لجمع البيانات فقط ولن يتنبَّأ بإصابتك بفيروس كوفيد أو يشخِّص أي مرض أو اضطراب أو حالة صحية أخرى. تقوم فيروڤاي بإجراء بحث وستستخدم المعلومات التي تقدمها لهذا البحث فقط. فيروڤاي لن تحل محل الطبيب وترغب في تذكيرك بأنه من مسؤوليتك استشارة الطبيب للحصول على النصيحة الطبية.",
+      "noteLabel": "يرجى الملاحظة:\u200F",
+      "noteBody": "\u202Bهذا النموذج مخصص لجمع البيانات فقط ولن يتنبَّأ بإصابتك بفيروس كوفيد أو يشخِّص أي مرض أو اضطراب أو حالة صحية أخرى. تقوم فيروڤاي بإجراء بحث وستستخدم المعلومات التي تقدمها لهذا البحث فقط. فيروڤاي لن تحل محل الطبيب وترغب في تذكيرك بأنه من مسؤوليتك استشارة الطبيب للحصول على النصيحة الطبية.\u202C",
       "selectYourLanguage": "اللغة",
       "nextButton": "التالي",
       "createdBy": "تم الإنشاء بواسطة",
