--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,6 +2,8 @@
   "main": {
     "title": "COVID-19 Cough Detection",
     "note": "<strong>Please note:</strong> This form is for data collection only. It will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
+    "noteLabel": "Please note:",
+    "noteBody": "This form is for data collection only. It will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take the place of a doctor and reminds you that it is your responsibility to seek medical advice from your doctor.",
     "selectYourLanguage": "Language",
     "nextButton": "Next",
     "createdBy": "Created By",
