--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -49,7 +49,7 @@
     "next": "続ける",
     "delete": "削除",
     "textCount": "「続ける」をクリックして次に進みます。",
-    "upload": "自分のファイルをアップロードする"
+    "upload": ""
   },
   "recordingsRecordManual": {
     "header": "ファイルのアップロード",
