--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,18 +1,19 @@
 {
   "main": {
     "title": "COVID-19 咳の検出",
-    "note": "<strong>注意:</strong> このフォームはデータ収集のみを目的としています。COVID-19の状態を予測したり、病気や障害、その他の健康状態を診断するものではございません。Virufyでは研究を行っており、提供していただいた情報はその研究のためだけに使用いたします。また、Virufyは医師の代わりにはなりませんので、ご自身の責任において医師の診断を受けるようにしてください。",
+    "note": "<strong>ご注意:</strong> このフォームはデータ収集のみを目的としており、COVID-19の感染状況を予測したり、病気・障害・その他の健康状態を診断したりするものではありません。Virufyは研究を目的としており、皆さまからご提供いただいた情報はその研究にのみ使用されます。Virufyは医師の代わりにはなれません。健康に関する相談や診断は、必ずご自身の医師にお尋ねください。",
     "selectYourLanguage": "言語",
     "nextButton": "次のページ",
     "createdBy": "作成者",
     "provideAccessCode": "アクセスコード",
     "enterAccessCode": "アクセスコードの入力",
     "aboutUsTitle": "会社概要",
-    "privacyPolicy": "次に進むと、当社のプライバシーポリシーの条項に同意したことになります。"
+    "privacyPolicy": "続行することで、<strong>当社のプライバシーポリシー</strong>に同意したものとみなされます。",
+    "virufyInfo": "<strong>Virufy</strong> は、Amazon Web Services、スタンフォード大学 COVID-19 Response Innovation ラボ、One Young World などを含む <strong>50 のパートナー団体</strong>と協力し、<strong>250名のボランティア・スタッフ</strong>によって運営されている、<strong>501(c)(3) 非営利団体</strong>です。私たちは、録音された咳の音声を AI で解析し、<strong>結核、慢性閉塞性肺疾患、COVID-19、インフルエンザなどの疾患リスクを判定する</strong>スマートフォンアプリを開発しました。Virufy は、スタンフォード大学、MIT、ハーバード大学の教授や卒業生の支援を受けています。<br /><br />世界中の人々から咳の録音データを収集することで、Virufy はそれぞれの病気特有の音声パターンを認識する AI アルゴリズムの精度を向上させています。<br /><br /><strong>ご注意:</strong> このフォームはデータ収集のみを目的としており、COVID-19の感染状況を予測したり、病気・障害・その他の健康状態を診断したりするものではありません。Virufyは研究を目的としており、皆さまからご提供いただいた情報はその研究にのみ使用されます。Virufyは医師の代わりにはなれません。健康に関する相談や診断は、必ずご自身の医師にお尋ねください。"
   },
   "helpVirufy": {
-    "aboutParagraph": "<0><strong>Virufy</strong> は <strong>501(c)(3) 非営利団体</strong> であり、<strong>250人のボランティア、スタッフ</strong> と <strong>50のパートナー組織</strong>を擁しています。 パートナー組織には、アマゾンウェブサービス、スタンフォードCOVID-19対応イノベーションラボ、One Young Worldなどが含まれます。 AIを活用して記録された咳の特徴を分析し、<strong>COVID 陽性の咳データとの類似性を判断する</strong>スマートフォンアプリを開発いたしました。 Virufy は、UW、スタンフォード、UC バークレー、MIT、ハーバード、CMU の教職員や卒業生によってサポートされています。</0> <1>世界中の人々から<strong>咳の記録</strong>を収集することで、Virufy はCOVID の独特な音のパターンを認識する AI アルゴリズムの確実性を高めています。</1><2><strong>あなたには、<strong>咳をする</strong>ことで世界中の何百万人もの人々に利益をもたらす力があります</strong>。 </2>",
-    "nextButton": "同意",
+    "aboutParagraph": "<0><strong>Virufy</strong> は、Amazon Web Services、スタンフォード大学 COVID-19 Response Innovation ラボ、One Young World などを含む <strong>50 のパートナー団体</strong>と協力し、<strong>250名のボランティア・スタッフ</strong>によって運営されている、<strong>501(c)(3) 非営利団体</strong>です。私たちは、録音された咳の音声を AI で解析し、<strong>結核、慢性閉塞性肺疾患、COVID-19、インフルエンザなどの疾患リスクを判定する</strong>スマートフォンアプリを開発しました。Virufy は、スタンフォード大学、MIT、ハーバード大学の教授や卒業生の支援を受けています。</0> <1>世界中の人々から咳の録音データを収集することで、Virufy はそれぞれの病気特有の音声パターンを認識する AI アルゴリズムの精度を向上させています。</1>",
+    "nextButton": "同意する",
     "installApp": "アプリとしてインストールする"
   },
   "beforeStart": {
